--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="mainbody">
       <video autoplay loop muted playsinline class="background-video">
-        <source src="/vid.webm" type="video/mp4" />
+        <source src="vid.webm" type="video/mp4" />
       </video>
 
       <div class="gorilla">
@@ -154,7 +154,7 @@
   </body>
 
   <audio id="background-music" autoplay loop>
-    <source src="/music.mp4" type="audio/mpeg" />
+    <source src="music.mp4" type="audio/mpeg" />
   </audio>
 
   <script src="back.js"></script>
