--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div>
         <video autoplay loop muted playsinline class="background-video2">
-          <source src="/bg.mp4" type="video/mp4" />
+          <source src="bg.mp4" type="video/mp4" />
         </video>
         <h1 class="big-text">Deep into the forest</h1>
 
